# portfolio

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
cv/: README.md  build.py  main.tex  preamble.tex
cv/scripts/: bib2yaml.py
cv/templates/: education.tex.j2  experience.tex.j2  grants.tex.j2  honors.tex.j2  identity.tex.j2  mentoring.tex.j2  publications.tex.j2  service.tex.j2  teaching.tex.j2
cv/tests/: conftest.py  test_bib2yaml.py  test_models.py  test_render_publications.py  test_render_simple.py
cv/tests/fixtures/: education_min.expected.tex  education_min.yaml  experience_min.yaml  (+9 more)
data/: bucketlist.yaml  education.yaml  experience.yaml  grants.yaml  honors.yaml  identity.yaml  mentoring.yaml  news.yaml  publications.yaml  reading-cache.json  reading.yaml  service.yaml  teaching.yaml  tree.yaml  twitter.yaml
docs/: ANALYTICS.md  REPOSTING.md
handoffs/: 20260617_UMAMI_SELFHOST.md  20260718_UMAMI_FIRST_PARTY_PROXY.md
infra/umami-proxy/: README.md  worker.js  wrangler.toml
scripts/: ig_repost.py  umami-heatmap-export.py  yt_repost.py
website/: _layout.html.j2  _works.html.j2  awards.html.j2  bucketlist.html.j2  build.py  heatmap-data.sample.json  heatmap.js  index.html.j2  inthepress.html.j2  page.html.j2  paper_render.py  publications.html.j2  reading.html.j2  robots.txt  site.yaml  styles.css  teaching.html.j2  tree.html.j2  twitter.html.j2
website/pages/: 404.md  bio.md  buymeacoffee.md  garage-compression-is-intelligence.md  garage-forget-training-phases.md  garage.md  twitter.md  whoiam.md  wholelifestory.md
(+3 files in other folders)
