[project]
name = "portfolio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "jinja2>=3.1",
    "pydantic>=2.6",
    "markupsafe",
    "mistune>=3.2.1",
    "feedparser>=6.0.12",
]

[tool.pytest.ini_options]
testpaths = ["cv/tests"]

[dependency-groups]
dev = [
    "pytest>=8",
]
